--- a/pom.xml
+++ b/pom.xml
@@ -55,22 +55,28 @@
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.11</artifactId>
-            <version>2.0.0</version>
+            <artifactId>spark-core_2.12</artifactId>
+            <version>2.4.5</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.11</artifactId>
-            <version>2.0.0</version>
+            <artifactId>spark-sql_2.12</artifactId>
+            <version>2.4.5</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-mllib_2.11</artifactId>
-            <version>2.0.0</version>
+            <artifactId>spark-mllib_2.12</artifactId>
+            <version>2.4.5</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming_2.12</artifactId>
+            <version>2.4.5</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-hive_2.12</artifactId>
             <version>2.4.5</version>
             <scope>provided</scope>
         </dependency>
